add screenShot service

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>Screenshot app</h1>
+    <form action="/screenshot" method="post">
+        <button onclick="takeScreenshot()">Take Screenshot</button>
+    </form>
     <script src="/javascripts/script.js"></script>
 </body>
 </html>
